--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Hello, I'm [Your Name]</h1>
+    <h1>Hello, I'm Egocentricfolklore16</h1>
     <p>Welcome to my portfolio website.</p>
   </header>
   <section>
